<resources>
    <string name="app_name">CarAnnouncementMobileProject</string>
    <string name="Loading">Gözləyin…</string>
    <string name="Create_Account">Hesab Yarat</string>
    <string name="Create_Account_Body">Yeni hesab yarat</string>
    <string name="Name">Ad</string>
    <string name="Email">Email ünvanı</string>
    <string name="password">Şifrə</string>
    <string name="Phone_Number">Mobil nömrənizi daxil edin</string>
    <string name="Have_Account">Artiq bir hesabın var ?</string>
    <string name="Login_Transition">Daxil ol</string>
    <string name="Welcome_back">Xoş gəlmisiniz</string>
    <string name="Sign_in_to_continue">Davam etmək ücün işarə.</string>
    <string name="Forgot_Password">Şifrəni unutmusan ? </string>
    <string name="Login">Daxil ol</string>
    <string name="Login_Have_Account">Bir hesabın yoxdur ?</string>
    <string name="Login_Transition_Register">Yeni Hesab yarat</string>
    <string name="Reset_Password">Şifrəni dəyişdir</string>
    <string name="Send">Göndər</string>
    <string name="Go_Back">Geri dönmək</string>
    <string name="Select_country">Yaşadığınız şəhəri seçin.</string>
    <string name="Select_country_label">Zəhmət olmasa yaşadığınız şəhəri seçin</string>
    <string name="Add_New_Password">Yeni şifrəni daxil edin.</string>
    <string name="Button_Yes">Bəli</string>
    <string name="Button_No">Xeyr</string>
    <string name="Please_Write_New_Password">Zəhmət olmasa şifrə daxil edin.</string>
    <string name="Settings">Parametrlər</string>
    <string name="LogOut">Hesabdan çıx</string>
    <string name="Login_success">Təşekkurlər Qeydiyyatdan kecdiniz.</string>
    <string name="Check_input"></string>
    <string name="Email_invalid">Emaildə səhv var</string>
    <string name="Name_invalid">Ad Sətirini boş saxlamayın </string>
    <string name="Phone_invalid">Mobil telefon sətirini boş saxlamayın </string>
    <string name="Email_Row_invalid">Email Sətirini boş saxlamayın </string>
    <string name="Password_invalid">Şifrə sətrini boş saxlamayın.</string>
    <string name="Password_length_invalid">Şifrənin uzunluğu minimum 6 simvol olmalıdır.</string>
    <string name="CheckInputs">Zehmet olmasa duzgun daxil edin</string>
    <string name="Response_Data">Şifrə və ya Email səhvdir...</string>
    <string name="Response_Db">Əlavə olunmadi...</string>
</resources>