<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/Login_Frame_Layout"
    tools:context=".View.Register.Login.LoginFragment">

    <RelativeLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

     <ImageView
         android:id="@+id/Login_Account_Image"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
         android:layout_width="match_parent"
         android:layout_height="@dimen/height_x_large"
         android:src="@drawable/create_account_image"
         android:layout_marginTop="@dimen/padding_large"
         tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/Login_Account_Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Welcome_back"
        android:layout_below="@id/Login_Account_Image"
        android:textSize="@dimen/text_small"
        android:textColor="@color/PrimaryDark"
        android:fontFamily="@font/regular"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="center"
        android:layout_margin="@dimen/margin_small" />

        <TextView
            android:id="@+id/Login_Account_Header_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/Login_Account_Header"
            android:textAlignment="center"
            android:fontFamily="@font/regular"
            android:text="@string/Sign_in_to_continue"
            android:textColor="@color/PrimarySecondary"
            />

        <EditText
            android:id="@+id/Login_Email_Input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Login_Account_Header_Title"
            android:hint="@string/Email"
            android:inputType="text"
            android:drawableStart="@drawable/email_icon_size"
            android:drawableTint="@color/PrimarySecondary"
            android:layout_marginHorizontal="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_x_large"
            android:textColorHint="@color/PrimarySecondary"
            android:drawablePadding="@dimen/drawable_small"
            android:padding="@dimen/padding_large"
            android:textColor="@color/PrimaryDark"
            android:background="@drawable/shadow_drawable"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            tools:ignore="TextFields"
            android:autofillHints="text"
            tools:targetApi="m" />


        <EditText
            android:id="@+id/Login_Password_Input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Login_Email_Input"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:drawableStart="@drawable/password_icon_size"
            android:drawableTint="@color/PrimarySecondary"
            android:layout_marginHorizontal="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:textColorHint="@color/PrimarySecondary"
            android:drawablePadding="@dimen/drawable_small"
            android:padding="@dimen/padding_large"
            android:textColor="@color/PrimaryDark"
            android:background="@drawable/shadow_drawable"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            tools:ignore="TextFields"
            android:autofillHints="text"
            tools:targetApi="m" />

        <TextView
            android:id="@+id/Login_Forgot_Password_Link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/Login_Password_Input"
            android:text="@string/Forgot_Password"
            android:layout_margin="@dimen/margin_medium"
            android:padding="@dimen/padding_x_small"
            android:textColor="@color/PrimaryDark" />


        <Button
            android:id="@+id/Login_Account_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Login_Forgot_Password_Link"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginHorizontal="@dimen/margin_x_large"
            android:layout_marginTop="@dimen/margin_medium"
            android:padding="@dimen/padding_large"
            android:text="@string/Login"
            android:fontFamily="@font/regular"
            android:textSize="@dimen/text_x_small"
            android:textStyle="bold"
            android:textColor="@color/white"  />

        <LinearLayout
            android:layout_below="@id/Login_Account_Button"
            android:layout_width="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:orientation="horizontal"
            android:layout_marginVertical="@dimen/margin_small"
            android:gravity="center"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/Login_Have_Account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Login_Have_Account"
                android:textSize="@dimen/text_x_small"
                android:textColor="@color/PrimarySecondary"

                />

            <TextView
                android:id="@+id/Login_Transition_Login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/PrimaryDark"
                android:textSize="@dimen/text_x_small"
                android:layout_marginHorizontal="@dimen/margin_medium"
                android:textStyle="bold"
                android:text="@string/Login_Transition_Register"

                />

        </LinearLayout>


    </RelativeLayout>
</FrameLayout>