<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/Forgot_Password_Layout"
    tools:context=".View.Register.ForgotPassword.ForgotPasswordFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:ignore="UselessParent">

    <ImageView
        android:id="@+id/Forgot_Password_Image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_x_large"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/margin_medium"
        android:src="@drawable/forgot_password"
        tools:ignore="ContentDescription" />

  <TextView
      android:id="@+id/Forgot_Password_Header"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/Reset_Password"
      android:layout_below="@id/Forgot_Password_Image"
      android:layout_alignParentStart="true"
      android:layout_alignParentEnd="true"
      android:textAlignment="center"
      android:layout_margin="@dimen/margin_medium"
      android:textColor="@color/PrimaryDark"
      android:textSize="@dimen/text_medium" />


        <EditText
            android:id="@+id/Forgot_Password_Email_Input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Forgot_Password_Header"
            android:hint="@string/Email"
            android:inputType="text"
            android:drawableStart="@drawable/email_icon_size"
            android:drawableTint="@color/PrimarySecondary"
            android:layout_marginHorizontal="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_x_large"
            android:textColorHint="@color/PrimarySecondary"
            android:drawablePadding="@dimen/drawable_small"
            android:padding="@dimen/padding_large"
            android:textColor="@color/PrimaryDark"
            android:background="@drawable/shadow_drawable"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            tools:ignore="TextFields"
            android:autofillHints="text"
            tools:targetApi="m" />


        <Button
            android:id="@+id/Forgot_Password_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Forgot_Password_Email_Input"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginHorizontal="@dimen/margin_x_large"
            android:layout_marginTop="@dimen/margin_x_large"
            android:padding="@dimen/padding_large"
            android:text="@string/Send"
            android:fontFamily="@font/regular"
            android:textSize="@dimen/text_x_small"
            android:textStyle="bold"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/Forgot_Password_Go_Back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:text="@string/Go_Back"
            android:textColor="@color/PrimaryDark"
            android:layout_margin="@dimen/margin_large"
            android:textSize="@dimen/text_x_small"
            android:textAlignment="center" />


    </RelativeLayout>

</FrameLayout>