<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="@dimen/width_small"
        android:layout_height="@dimen/height_small"
        android:src="@drawable/padlock"
        android:layout_margin="@dimen/margin_medium"
        tools:ignore="ContentDescription" />


    <EditText
        android:id="@+id/password_change_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Add_New_Password"
        android:inputType="textPassword"
        android:fontFamily="@font/nerk"
        android:background="@drawable/shadow_drawable"
        android:layout_marginVertical="@dimen/margin_medium"
        android:drawableStart="@drawable/password_icon_size"
        android:drawableTint="@color/PrimarySecondary"
        android:layout_marginHorizontal="@dimen/margin_large"
        android:textColorHint="@color/blueDark"
        android:drawablePadding="@dimen/drawable_small"
        android:padding="@dimen/padding_large"
        android:textColor="@color/PrimaryDark"
        tools:ignore="TextFields"
        android:autofillHints="text"
        tools:targetApi="m" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/Button_Yes_Dialog"
            android:layout_width="match_parent"
            android:text="@string/Button_Yes"
            android:textColor="@color/white"
            android:fontFamily="@font/nerk"
            android:backgroundTint="@color/blueDark"
            android:layout_margin="@dimen/margin_medium"
            android:textSize="@dimen/text_x_small"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/Button_No_Dialog"
            android:layout_width="match_parent"
            android:text="@string/Button_No"
            android:layout_weight="1"
            android:backgroundTint="#E91E63"
            android:layout_margin="@dimen/margin_medium"
            android:fontFamily="@font/nerk"
            android:textColor="@color/white"
            android:textSize="@dimen/text_x_small"
            android:layout_height="wrap_content"
            tools:ignore="ButtonStyle" />


    </LinearLayout>


</LinearLayout>